--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/assets/image/LOG.JPG" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="naver-site-verification" content="d99a6da6958b103690658f97423752794d68e4e5" />
     <meta
       name="description"
       content="Web site created using create-react-app"
