--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="naver-site-verification" content="d99a6da6958b103690658f97423752794d68e4e5" />
+    <meta name="google-site-verification" content="OMZRGTV6VgNG2tIkNOD6mSE0Iz68NaO36Xz0XOi9ohE" />
     <meta
       name="description"
       content="Web site created using create-react-app"
