검색어 추가

--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,21 @@
     <link rel="icon" href="%PUBLIC_URL%/assets/image/LOGO.JPG" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <!-- 네이버, 구글 meta 인증 세팅-->
     <meta name="naver-site-verification" content="d99a6da6958b103690658f97423752794d68e4e5" />
     <meta name="google-site-verification" content="OMZRGTV6VgNG2tIkNOD6mSE0Iz68NaO36Xz0XOi9ohE" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
+    <!-- Open Graph 메타 (SNS/포털 검색 대응) -->
+    <meta property="og:title" content="OBED Worship" />
+    <meta name="description" content="OBED Worship은 예배 찬양 사역팀입니다. 팀 소개, 집회 목록 및 사진, 사역지 정보를 확인하실 수 있습니다." />
+    <meta name="keywords" content="OBED, Obed Worship, obed worship, 오벧 워쉽, 오벧, 예배 찬양, 찬양팀" />
+    
+    <!-- Open Graph 메타 (SNS/포털 검색 대응) -->
+    <meta property="og:description" content="예배 찬양 사역팀 OBED Worship의 소개, 집회 목록 및 사역지를 확인하세요. OBED, obed worship, 오벧 워쉽 등 다양한 이름으로 검색됩니다." />
+    <meta property="og:image" content="https://obedwebsite.vercel.app/assets/image/LOGO.JPG" />
+    <meta property="og:url" content="https://obedwebsite.vercel.app/" />
+    <meta property="og:type" content="website" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -26,7 +34,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>OBED</title>
+    <title>OBED Worship | 예배 찬양 사역팀</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
