--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <!-- Open Graph 메타 (SNS/포털 검색 대응) -->
     <meta property="og:title" content="OBED Worship" />
     <meta name="description" content="OBED Worship은 예배 찬양 사역팀입니다. 팀 소개, 집회 목록 및 사진, 사역지 정보를 확인하실 수 있습니다." />
-    <meta name="keywords" content="OBED, Obed Worship, obed worship, 오벧 워쉽, 오벧, 예배 찬양, 찬양팀" />
+    <meta name="keywords" content="OBED, Obed Worship, obed worship, 오벧 워십, 오벧, 오벧 찬양팀" />
     
     <!-- Open Graph 메타 (SNS/포털 검색 대응) -->
     <meta property="og:description" content="예배 찬양 사역팀 OBED Worship의 소개, 집회 목록 및 사역지를 확인하세요. OBED, obed worship, 오벧 워쉽 등 다양한 이름으로 검색됩니다." />
