--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <meta name="keywords" content="OBED, Obed Worship, obed worship, 오벧 워십, 오벧, 오벧 찬양팀" />
     
     <!-- Open Graph 메타 (SNS/포털 검색 대응) -->
-    <meta property="og:description" content="예배 찬양 사역팀 OBED Worship의 소개, 집회 목록 및 사역지를 확인하세요. OBED, obed worship, 오벧 워쉽 등 다양한 이름으로 검색됩니다." />
+    <meta property="og:description" content="예배 찬양 사역팀 OBED Worship의 소개, 집회 목록 및 사역지를 확인하세요. OBED, obed worship, 오벧 워십 등 다양한 이름으로 검색됩니다." />
     <meta property="og:image" content="https://obedwebsite.vercel.app/assets/image/LOGO.JPG" />
     <meta property="og:url" content="https://obedwebsite.vercel.app/" />
     <meta property="og:type" content="website" />
